--- a/src/apps/OpenHumanTask.Runtime.Dashboard/OpenHumanTask.Runtime.Dashboard.csproj
+++ b/src/apps/OpenHumanTask.Runtime.Dashboard/OpenHumanTask.Runtime.Dashboard.csproj
@@ -17,16 +17,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.9" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.9" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.10" PrivateAssets="all" />
     <PackageReference Include="Neuroglia.Data.Flux.ReduxDevTools" Version="2.0.3" />
     <PackageReference Include="OData.QueryBuilder" Version="2.9.6" />
-    <PackageReference Include="OpenHumanTask.Sdk" Version="0.1.3" />
+    <PackageReference Include="OpenHumanTask.Sdk" Version="0.1.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\OpenHumanTask.Runtime.Client\OpenHumanTask.Runtime.Client.csproj" />
-    <ProjectReference Include="..\..\core\OpenHumanTask.Runtime.Client\OpenHumanTask.Runtime.Client.csproj" />
+    <ProjectReference Include="..\..\core\OpenHumanTask.Runtime.Integration\OpenHumanTask.Runtime.Integration.csproj" />
   </ItemGroup>
 
   <ItemGroup>
