--- a/src/core/OpenHumanTask.Runtime.Application/OpenHumanTask.Runtime.Application.csproj
+++ b/src/core/OpenHumanTask.Runtime.Application/OpenHumanTask.Runtime.Application.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -10,14 +10,11 @@
     <NeutralLanguage>en-US</NeutralLanguage>	  
     <Authors>The Open Human Task Specification Authors</Authors>
     <Copyright>Copyright © 2022 - Present The Open Human Task Specification Authors. All rights reserved.</Copyright>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="Properties\.editorconfig" />
-  </ItemGroup>
-	
-  <ItemGroup>
-    <ProjectReference Include="..\OpenHumanTask.Runtime.Domain\OpenHumanTask.Runtime.Domain.csproj" />
   </ItemGroup>
 	
   <ItemGroup>
@@ -26,14 +23,20 @@
   </ItemGroup>
 	
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-	<PackageReference Include="Microsoft.AspNetCore.OData" Version="8.0.11" />
-	<PackageReference Include="Microsoft.OData.ModelBuilder" Version="1.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
 	<PackageReference Include="Neuroglia.AspNetCore.JsonPatch" Version="2.0.3" />
+	<PackageReference Include="Neuroglia.Caching.InMemory" Version="2.0.3" />
+	<PackageReference Include="Neuroglia.Data.DistributedCache" Version="2.0.3" />
 	<PackageReference Include="Neuroglia.Data.Expressions" Version="2.0.3" />
+	<PackageReference Include="Neuroglia.Data.Expressions.JQ" Version="2.0.3" />
     <PackageReference Include="Neuroglia.Eventing.CloudEvents" Version="2.0.3" />
     <PackageReference Include="Neuroglia.Mapping" Version="2.0.3" />
-    <PackageReference Include="Neuroglia.Mediation" Version="2.0.3" />
+    <PackageReference Include="Neuroglia.Mediation.FluentValidation" Version="2.0.3" />
+    <PackageReference Include="System.ServiceModel.Primitives" Version="4.10.0" />
+  </ItemGroup>
+	
+  <ItemGroup>
+    <ProjectReference Include="..\OpenHumanTask.Runtime.Infrastructure\OpenHumanTask.Runtime.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
