--- a/tests/OpenHumanTask.Runtime.IntegrationTests/OpenHumanTask.Runtime.IntegrationTests.csproj
+++ b/tests/OpenHumanTask.Runtime.IntegrationTests/OpenHumanTask.Runtime.IntegrationTests.csproj
@@ -10,7 +10,10 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.23.1" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\core\OpenHumanTask.Runtime.Application\OpenHumanTask.Runtime.Application.csproj" />
+    <ProjectReference Include="..\..\src\apps\OpenHumanTask.Runtime.Api\OpenHumanTask.Runtime.Api.csproj" />
   </ItemGroup>
 
 </Project>
