--- a/src/apps/OpenHumanTask.Runtime.Api/OpenHumanTask.Runtime.Api.csproj
+++ b/src/apps/OpenHumanTask.Runtime.Api/OpenHumanTask.Runtime.Api.csproj
@@ -9,13 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.10" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+    <PackageReference Include="Neuroglia.Eventing.CloudEvents.AspNetCore" Version="2.0.3" />
     <PackageReference Include="Neuroglia.Mediation.AspNetCore" Version="2.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\core\OpenHumanTask.Runtime.Application\OpenHumanTask.Runtime.Application.csproj" />
+    <ProjectReference Include="..\OpenHumanTask.Runtime.Dashboard\OpenHumanTask.Runtime.Dashboard.csproj" />
   </ItemGroup>
 
 </Project>
