--- a/src/apps/OpenHumanTask.Runtime.Dashboard/OpenHumanTask.Runtime.Dashboard.csproj
+++ b/src/apps/OpenHumanTask.Runtime.Dashboard/OpenHumanTask.Runtime.Dashboard.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <None Include="compilerconfig.json" />
     <None Include="Components\Shared\Breadcrumb\Breadcrumb.razor" />
+    <None Include="Components\Shared\SearchBox\SearchBox.razor" />
   </ItemGroup>
 
   <ItemGroup>
