--- a/src/core/OpenHumanTask.Runtime.Application/OpenHumanTask.Runtime.Application.csproj
+++ b/src/core/OpenHumanTask.Runtime.Application/OpenHumanTask.Runtime.Application.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 	
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
 	<PackageReference Include="Neuroglia.AspNetCore.JsonPatch" Version="2.0.3" />
 	<PackageReference Include="Neuroglia.Caching.InMemory" Version="2.0.3" />
